...

export type BottomTabParamList = {
  Dashboard: undefined;
  Matches: { property?: any; selectedProperty?: any; matchId?: number } | undefined;
  MyProperties: undefined;
  Credits: undefined;
  Profile: undefined;
};

const Tab = createBottomTabNavigator<BottomTabParamList>();

interface TabIconProps {
  iconName?: string;
...
      }}>
      <Tab.Screen
        name="Dashboard"
        component={DashboardScreen}
        options={{
          tabBarIcon: ({ focused }) => (
            <TabIcon iconName="home-outline" iconNameFocused="home" label="Home" focused={focused} />
          ),
        }}
      />
      <Tab.Screen
        name="Matches"
        component={MatchesScreen}
...
